general refactoring of functional code, FunctionRegistry